--- a/SoftDesk/templates/SoftDesk/base.html
+++ b/SoftDesk/templates/SoftDesk/base.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}" />
 </head>
 <body>
-{% block content %} {% endblock content %}
+    {% if user.is_authenticated %}
+        <p>Vous êtes connecté en tant que {{ request.user }} <a href="{% url 'authentication:logout' %}">Se déconnecter</a></p>
+    {% endif %}
+    {% block content %} {% endblock content %}
 </body>
 </html>
